# csharp-cpp-arrow-interop-example

./: .gitignore  Program.cs  README.md  arrow-dotnet-c-interop.csproj
cpp/: CMakeLists.txt
cpp/include/: lib.h
cpp/src/: lib.cpp
